modifications to index

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
                         <h2>Pranav Paridhan is the perfect place for your next purchase!</h2>
-                        <p class="lead mb-5"><!--
-                            This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
+                        <p class="lead mb-5">
+                            The beautiful world of Indian Ethnic Wear. We have a mix of traditional and trendy; which means there is something for everyone.
+							<!--
                             <a href="https://unsplash.com/">Unsplash</a>
                             !-->
                         </p>
@@ -65,26 +66,43 @@
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
                         <h4><strong>Ladies Suits</strong></h4>
-                        <p class="text-faded mb-0">Looks great on any screen size!</p>
+                        <p class="text-faded mb-0">Affordable Prices on Amazing Designs!</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
                         <h4><strong>Kurtis</strong></h4>
-                        <p class="text-faded mb-0">Freshly redesigned for Bootstrap 5.</p>
+                        <p class="text-faded mb-0">We have some of the best collections of beautiful Kurtis available for daily as well as occassional wear.</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-like"></i></span>
                         <h4><strong>Dress Material</strong></h4>
                         <p class="text-faded mb-0">
-                            Millions of users
+                            Lots of choices for Dress Material to steal your
                             <i class="fas fa-heart"></i>
-                            Start Bootstrap!
+                            heart!
                         </p>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i><br/>
+						<i class="icon-symbol-female"></i>
+							<i class="icon-symbol-female"></i>
+							<i class="icon-badge"></i>
+							<i class="icon-trophy"></i>
+							<i class="icon-symbol-female"></i>
+							<i class="icon-symbol-female"></i>
+							<i class="icon-symbol-female"></i>
+							<i class="icon-symbol-female"></i>
+							<i class="icon-symbol-female"></i>
+							<i class="icon-symbol-female"></i>
+							<i class="icon-symbol-female"></i>
+							<i class="icon-symbol-female"></i>
+							<i class="icon-symbol-female"></i>
+							<i class="icon-symbol-female"></i>
+							<i class="icon-symbol-female"></i>
+							<i class="icon-symbol-female"></i>
+						</span>
                         <h4><strong>Saris etc.</strong></h4>
-                        <p class="text-faded mb-0">I mustache you a question...</p>
+                        <p class="text-faded mb-0">Beautiful Saris with Festive Vibes!</p>
                     </div>
                 </div>
             </div>
@@ -107,7 +125,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading text-center">
                     <h3 class="text-secondary mb-0">Portfolio</h3>
-                    <h2 class="mb-5">Recent Projects</h2>
+                    <h2 class="mb-5">Recent Collection</h2>
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
