--- a/index.html
+++ b/index.html
@@ -83,23 +83,7 @@
                         </p>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i><br/>
-						<i class="icon-symbol-female"></i>
-							<i class="icon-symbol-female"></i>
-							<i class="icon-badge"></i>
-							<i class="icon-trophy"></i>
-							<i class="icon-symbol-female"></i>
-							<i class="icon-symbol-female"></i>
-							<i class="icon-symbol-female"></i>
-							<i class="icon-symbol-female"></i>
-							<i class="icon-symbol-female"></i>
-							<i class="icon-symbol-female"></i>
-							<i class="icon-symbol-female"></i>
-							<i class="icon-symbol-female"></i>
-							<i class="icon-symbol-female"></i>
-							<i class="icon-symbol-female"></i>
-							<i class="icon-symbol-female"></i>
-							<i class="icon-symbol-female"></i>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i>
 						</span>
                         <h4><strong>Saris etc.</strong></h4>
                         <p class="text-faded mb-0">Beautiful Saris with Festive Vibes!</p>
