modified index for classified

--- a/classifieds/index.html
+++ b/classifieds/index.html
@@ -1,4 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Pranav Paridhan - Portfolio</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    </head>
+    <body id="page-top">
    {% assign doclist = site.pages | sort: 'url'  %}
     <ul>
        {% for doc in doclist %}
@@ -7,3 +18,5 @@
             {% endif %}
         {% endfor %}
     </ul>
+    </body>
+</html>
