--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
                             !-->
                         </p>
                         <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
+
+{% assign doclist = site.pages | sort: 'url'  %}
+    <ul>
+       {% for doc in doclist %}
+            {% if doc.name contains '.md' or doc.name contains '.html' %}
+                <li><a href="{{ site.baseurl }}{{ doc.url }}">{{ doc.url }}</a></li>
+            {% endif %}
+        {% endfor %}
+    </ul>
+
                     </div>
                 </div>
             </div>
