modified index for classified

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
                         </p>
                         <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
 
-{% assign doclist = site.pages | sort: 'url'  %}
-    <ul>
-       {% for doc in doclist %}
-            {% if doc.name contains '.md' or doc.name contains '.html' %}
-                <li><a href="{{ site.baseurl }}{{ doc.url }}">{{ doc.url }}</a></li>
-            {% endif %}
-        {% endfor %}
-    </ul>
+			{% assign doclist = site.pages | sort: 'url'  %}
+    			<ul>
+       			{% for doc in doclist %}
+            			{% if doc.name contains '.md' or doc.name contains '.html' or doc.name contains '.jpg' %}
+                			<li><a href="{{ site.baseurl }}{{ doc.url }}">{{ doc.url }}</a></li>
+            			{% endif %}
+        		{% endfor %}
+    			</ul>
 
                     </div>
                 </div>
