--- a/index.html
+++ b/index.html
@@ -53,18 +53,19 @@
                             !-->
                         </p>
                         <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
-			<span>updated</span>
+			<br/>
+			<h3>Section 1</h3>
 {% assign image_files = site.static_files %}
 {% for myimage in image_files %}
   {{ myimage.path }}<br/>
 {% endfor %}
-
-<!--
+<h3>Section 2</h3>
+<!-- -->
 {% assign image_files = site.static_files | where: "image", true %}
 {% for myimage in image_files %}
-  {{ myimage.path }}
+  {{ myimage.path }}<br/>
 {% endfor %}
--->
+
                     </div>
                 </div>
             </div>
