--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <!-- -->
 {% assign image_files = site.static_files | where: "image", true %}
 {% for myimage in image_files %}
-	{% if myimage.extname == '.jpeg' or '.jpg' %}
+	{% if myimage.extname == ".jpeg" or ".jpg" %}
   		{{ myimage.path }} - {{ myimage.name }} - {{ myimage.basename }} - {{ myimage.extname }}<br/>
 	{% endif %}
 {% endfor %}
