--- a/index.html
+++ b/index.html
@@ -60,10 +60,17 @@
   {{ myimage.path }}<br/>
 {% endfor %}
 <h3>Section 2</h3>
-<!-- -->
+<!--
 {% assign image_files = site.static_files | where: "image", true %}
 {% for myimage in image_files %}
 	{% if myimage.extname == ".jpeg" or ".jpg" %}
+  		{{ myimage.path }} - {{ myimage.name }} - {{ myimage.basename }} - {{ myimage.extname }}<br/>
+	{% endif %}
+{% endfor %}
+ -->
+{% assign image_files = site.static_files | where: "image", true %}
+{% for myimage in image_files %}
+	{% if myimage.extname contains "jpeg" %}
   		{{ myimage.path }} - {{ myimage.name }} - {{ myimage.basename }} - {{ myimage.extname }}<br/>
 	{% endif %}
 {% endfor %}
