--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
  -->
 {% assign image_files = site.static_files | where: "image", true %}
 {% for myimage in image_files %}
-	{% if myimage.extname contains "jpeg" %}
+	{% if myimage.extname == "html" %}
   		{{ myimage.path }} - {{ myimage.name }} - {{ myimage.basename }} - {{ myimage.extname }}<br/>
 	{% endif %}
 {% endfor %}
