--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
  -->
 {% assign image_files = site.static_files | where: "image", true %}
 {% for myimage in image_files %}
-	{% if myimage.extname == "html" %}
+	{% if myimage.extname == ".jpeg" or myimage.extname == ".jpg" or myimage.extname == ".png" %}
   		{{ myimage.path }} - {{ myimage.name }} - {{ myimage.basename }} - {{ myimage.extname }}<br/>
 	{% endif %}
 {% endfor %}
