modifications for gallery

--- a/gallery.html
+++ b/gallery.html
@@ -75,7 +75,7 @@ img {
 }
 
 .popup {
-  position: relative;/* position: fixed; */
+  position: absolute;/* position: fixed; */
   z-index: 2;
   top: 0;
   left: 0;
